# DSDesign

./: .gitignore
DSDesign1/: CMakeCache.txt  CMakeLists.txt  DartConfiguration.tcl  Makefile  dependency_graph.dot  main.cpp
DSDesign1/html/: CMakeFiles_23_824_81_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  CMakeFiles_23_824_81_2CompilerIdC_2CMakeCCompilerId_8c.html  CMakeFiles_2TargetDirectories_8txt.html  CMakeLists_8txt.html  CMakeRuleHashes_8txt.html  DartConfiguration_8tcl.html  IOTools_8hpp.html  IOTools_8hpp__dep__incl.map  IOTools_8hpp__dep__incl.md5  IOTools_8hpp__incl.map  IOTools_8hpp__incl.md5  IOTools_8hpp_source.html  IOTools_8ipp.html  IOTools_8ipp__dep__incl.map  IOTools_8ipp__dep__incl.md5  SortTools_8hpp.html  SortTools_8hpp__dep__incl.map  SortTools_8hpp__dep__incl.md5  SortTools_8hpp__incl.map  SortTools_8hpp__incl.md5  SortTools_8hpp_source.html  SortTools_8ipp.html  SortTools_8ipp__dep__incl.map  SortTools_8ipp__dep__incl.md5  a_8txt.html  aaa_8txt.html  abc_8txt.html  abcd_8txt.html  abcdef_8txt.html  annotated.html  classIOTools-members.html  classIOTools.html  classIOTools__coll__graph.map  classSortTools-members.html  classSortTools.html  classSortTools__coll__graph.map  classSortTools__coll__graph.md5  classes.html  clion-Debug-log_8txt.html  cmake-build-debug_2CMakeFiles_23_824_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  (+36 more)
DSDesign1/include/: IOTools.hpp  IOTools.ipp  SortTools.hpp  SortTools.ipp  head.h  menu.hpp
DSDesign1/latex/: CMakeFiles_23_824_81_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.tex  CMakeFiles_2TargetDirectories_8txt.tex  (+44 more)
(+161 files in other folders)
